--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
+
                     </li>
                 </ul>
             </div>
@@ -80,7 +81,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
-                <p>Internaut</p>
+                <p>Research Assistant, Teaching Assistant<br>
+                University at Albany</p><br>
+                <p>Informatics and Computer Science Student</p>
                 </div>
         </div>
     </section>
@@ -89,9 +92,13 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Current Projects</h2>
-                    <p class="btn btn-default btn-lg">Coming Soon</p>
-                    </div>
+                    <h2>Projects and Presentations</h2>
+                    <ul class="projectul">
+                    <li><a href="http://austinlparker.github.io/austinlparker/osf2014/">platform as code for the research and learning environment</a> - 3.29.14 for UA Open Source Festival</li>
+                    <li><a href="http://austinlparker.github.io/austinlparker/shell-presentation">terminal velocity - an introduction to the shell</a> - spring 2014 lecture</li> 
+                    <li><a href="../resume/">resume example for inf201</a> - spring 2014 bootstrap demo</li> 
+                    </ul>             
+                     </div>
             </div>
         </div>
     </section>
